--- a/server/.env
+++ b/server/.env
@@ -9,7 +9,7 @@ CLOUDINARY_SECRET_KEY=W_VAhUi_maakTzU-fcEm7R6tt00
 PAYHERE_MERCHANT_ID=1232218
 PAYHERE_MERCHANT_SECRET=MTEyNjYyMDYyNDIyMzIxOTg4MjMxMjkwNzI4ODg4NDQ2Mjc3ODUz
 
-SITE_URL=http://localhost:5173
+SITE_URL=https://shop-ease-beige.vercel.app/
 BASE_URL=http://localhost:5000
 
 PAYHERE_RETURN_URL=http://localhost:5173/pay/success
