--- a/server/.env
+++ b/server/.env
@@ -4,12 +4,12 @@ JWT_SECRET=mysecretkey1234567890
 
 CLOUDINARY_CLOUD_NAME=dtmhkpdvc
 CLOUDINARY_API_KEY=334822591942513
-CLOUDINARY_SECRET_KEY=W_VAhUi_maakTzU-fcEm7R6tt00
+CLOUDINARY_SECRET_KEY=NDI1OTA5NzAzMDQxMzg0MDQ1MjcwNTA4MDExNDI2MjA2MjM1NQ==
 
 PAYHERE_MERCHANT_ID=1232218
 PAYHERE_MERCHANT_SECRET=MTEyNjYyMDYyNDIyMzIxOTg4MjMxMjkwNzI4ODg4NDQ2Mjc3ODUz
 
-SITE_URL=https://shop-ease-beige.vercel.app/
+SITE_URL=http://localhost:5173 
 BASE_URL=http://localhost:5000
 
 PAYHERE_RETURN_URL=http://localhost:5173/pay/success
