--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,5 @@
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=http://myshop.test:5000/api
 
 VITE_PAYHERE_MERCHANT_ID=1232218
-VITE_PAYHERE_RETURN_URL=http://localhost:5173/pay/success
-VITE_PAYHERE_CANCEL_URL=http://localhost:5173/pay/cancel
+VITE_PAYHERE_RETURN_URL=http://myshop.test:5173/pay/success
+VITE_PAYHERE_CANCEL_URL=http://myshop.test:5173/pay/cancel
