--- a/server/.env
+++ b/server/.env
@@ -1,17 +1,22 @@
+# Backend
 PORT=5000
 MONGODB_URL=mongodb+srv://admin:admin@cluster0.jxg2urp.mongodb.net/ShopEase?retryWrites=true&w=majority
 JWT_SECRET=mysecretkey1234567890
 
+# Cloudinary
 CLOUDINARY_CLOUD_NAME=dtmhkpdvc
 CLOUDINARY_API_KEY=334822591942513
-CLOUDINARY_SECRET_KEY=NDI1OTA5NzAzMDQxMzg0MDQ1MjcwNTA4MDExNDI2MjA2MjM1NQ==
+CLOUDINARY_SECRET_KEY=MzQ5NDA4MDc1OTI4NzgwNDQ5MjYxMTU4NTQzNzk4MzI3NjEzMzkzMg==
 
+# PayHere
 PAYHERE_MERCHANT_ID=1232218
-PAYHERE_MERCHANT_SECRET=MTEyNjYyMDYyNDIyMzIxOTg4MjMxMjkwNzI4ODg4NDQ2Mjc3ODUz
+PAYHERE_MERCHANT_SECRET=MzQ5NDA4MDc1OTI4NzgwNDQ5MjYxMTU4NTQzNzk4MzI3NjEzMzkzMg==
 
-SITE_URL=http://localhost:5173 
-BASE_URL=http://localhost:5000
+# Local site/backend (frontend Vite default 5173, backend Express 5000)
+SITE_URL=http://myshop.test:5173
+BASE_URL=http://myshop.test:5000
 
-PAYHERE_RETURN_URL=http://localhost:5173/pay/success
-PAYHERE_CANCEL_URL=http://localhost:5173/pay/cancel
-PAYHERE_IPN_URL=http://localhost:5000/api/payhere/ipn
+# PayHere Redirects
+PAYHERE_RETURN_URL=http://myshop.test:5173/pay/success
+PAYHERE_CANCEL_URL=http://myshop.test:5173/pay/cancel
+PAYHERE_IPN_URL=http://myshop.test:5000/api/payhere/ipn
