--- a/server/.env
+++ b/server/.env
@@ -1,18 +1,19 @@
-# Backend
+# Server
 PORT=5000
 MONGODB_URL=mongodb+srv://admin:admin@cluster0.jxg2urp.mongodb.net/ShopEase?retryWrites=true&w=majority
 JWT_SECRET=mysecretkey1234567890
+NODE_ENV=development
 
 # Cloudinary
 CLOUDINARY_CLOUD_NAME=dtmhkpdvc
 CLOUDINARY_API_KEY=334822591942513
-CLOUDINARY_SECRET_KEY=MzQ5NDA4MDc1OTI4NzgwNDQ5MjYxMTU4NTQzNzk4MzI3NjEzMzkzMg==
+CLOUDINARY_SECRET_KEY=W_VAhUi_maakTzU-fcEm7R6tt00
 
-# PayHere
+# PayHere (sandbox or live)
 PAYHERE_MERCHANT_ID=1232218
 PAYHERE_MERCHANT_SECRET=MzQ5NDA4MDc1OTI4NzgwNDQ5MjYxMTU4NTQzNzk4MzI3NjEzMzkzMg==
 
-# Local site/backend (frontend Vite default 5173, backend Express 5000)
+# URLs
 SITE_URL=http://myshop.test:5173
 BASE_URL=http://myshop.test:5000
 
